최신화 및 오류 수정

--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
                 <h1 class="hero-name text-6xl md:text-8xl font-bold mb-3 text-white">이재욱</h1>
                 <p class="hero-title text-xl md:text-3xl text-gray-300 mb-4">AI Developer</p>
                 <p class="hero-intro text-lg md:text-xl text-gray-400 mb-8 max-w-2xl mx-auto">
-                    "코드가 현실이 되는 순간, 그 짜릿함에 매료된 개발자입니다. <br class="hidden sm:block">새로운 지식을 탐구하고, 아이디어를 실현하며 함께 성장하는 것을 즐깁니다."
+                    "새로운 기술을 배우고 활용하여 실용적인 솔루션을 만드는 것을 좋아합니다. <br class="hidden sm:block">끊임없이 학습하며 성장하는 개발자가 되고자 합니다."
                 </p>
                 <div class="space-y-3 sm:space-y-0 sm:space-x-8 text-gray-400 mb-8">
                     <span><a href="mailto:ki00035@naver.com" class="header-link text-lg">ki00035@naver.com</a></span>
@@ -352,16 +352,14 @@
                 <h2 class="section-title text-center">About Me</h2>
                 <div class="max-w-3xl mx-auto text-center">
                     <p class="about-me-text text-xl md:text-2xl text-gray-300 leading-relaxed">
-                        "코드가 현실이 되는 순간, 그 짜릿함에 매료된 개발자입니다.
+                        "새로운 기술을 배우고 활용하여 실용적인 솔루션을 만드는 것을 좋아합니다.
                         <br class="my-3">
-                        새로운 지식을 탐구하고, 아이디어를 실현하며 
-                        <br class="hidden md:block">
-                        함께 성장하는 것을 즐깁니다."
+                        끊임없이 학습하며 성장하는 개발자가 되고자 합니다."
                     </p>
                     <p class="mt-6 text-gray-400 text-lg">
-                        저는 문제 해결 과정 자체에서 큰 동기부여를 얻으며, 기술을 통해 아이디어를 현실로 만드는 작업에 깊은 열정을 가지고 있습니다. 
-                        복잡한 문제에 직면했을 때, 창의적인 접근과 꾸준한 노력으로 해결책을 찾아내는 과정에서 성취감을 느낍니다.
-                        AI 기술의 무한한 가능성을 탐구하며, 사회에 긍정적인 영향을 줄 수 있는 혁신적인 솔루션을 개발하는 것을 목표로 하고 있습니다.
+                        기계공학 전공 후 AI 분야로 전향하여 머신러닝과 딥러닝 기술을 활용한 서비스 개발에 집중하고 있습니다.
+                        문제를 체계적으로 분석하고 효율적인 해결책을 찾는 것을 중요하게 생각하며, 팀원들과의 협업을 통해 더 나은 결과를 만들어내고자 노력합니다.
+                        현재는 AI 기반 교육 서비스 개발과 모델 최적화에 관심을 가지고 있으며, 실무에서 활용 가능한 기술 역량을 지속적으로 쌓아가고 있습니다.
                     </p>
                 </div>
             </div>
@@ -377,7 +375,7 @@
                     </div>
                     <div class="card">
                         <h3 class="text-xl font-semibold mb-1">충남대학교 기계공학부</h3>
-                        <p class="text-gray-300">2022년 2월 졸업</p>
+                        <p class="text-gray-300">2024년 8월 졸업</p>
                     </div>
                 </div>
             </div>
@@ -385,16 +383,39 @@
 
         <section id="experience" class="mb-20 md:mb-32 scroll-animate min-h-screen flex flex-col justify-center">
             <div>
-                <h2 class="section-title">경력</h2>
-                <div class="card max-w-3xl mx-auto">
-                    <h3 class="text-xl font-semibold">KAIST 모빌리티 연구소, 연구원</h3>
-                    <p class="text-gray-400 mb-2">2022.04 ~ 2024.04</p>
-                    <strong class="block text-lg text-gray-100 mt-4 mb-2">주요 연구: 배터리 관리 시스템 (BMS)</strong>
-                    <ul class="list-disc list-inside text-gray-300 space-y-1.5 pl-2">
-                        <li>핵심 알고리즘: <span class="font-medium text-gray-200">EKF, DEKF</span></li>
-                        <li>추정 항목: <span class="font-medium text-gray-200">SOC (State of Charge), SOH (State of Health)</span></li>
-                        <li>목표: 실시간 상태 추정 및 배터리 효율 최적화</li>
-                    </ul>
+                <h2 class="section-title">경력 및 수상</h2>
+                <div class="space-y-8 max-w-3xl mx-auto">
+                    <div class="card">
+                        <h3 class="text-xl font-semibold">KAIST 모빌리티 연구소, 연구원</h3>
+                        <p class="text-gray-400 mb-4">2022.04 ~ 2024.04</p>
+                        <strong class="block text-lg text-gray-100 mt-4 mb-3">주요 연구: 배터리 관리 시스템 (BMS)</strong>
+                        <ul class="list-disc list-inside text-gray-300 space-y-2 pl-2 mb-4">
+                            <li>핵심 알고리즘: <span class="font-medium text-gray-200">EKF, DEKF</span> 기반 상태 추정</li>
+                            <li>추정 항목: <span class="font-medium text-gray-200">SOC (State of Charge), SOH (State of Health)</span></li>
+                            <li>목표: 실시간 상태 추정 및 배터리 효율 최적화</li>
+                            <li>성과: 배터리 상태 추정 정확도 <span class="font-medium text-blue-400">15% 향상</span> 달성</li>
+                        </ul>
+                        <div class="bg-gray-900 p-3 rounded-lg border border-gray-700">
+                            <strong class="text-yellow-400 text-sm">주요 기술 스택:</strong>
+                            <span class="text-gray-300 text-sm"> MATLAB/Simulink, C (STM32), 칼만 필터, 신호 처리</span>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <h3 class="text-xl font-semibold mb-3">수상 및 성과</h3>
+                        <div class="space-y-3">
+                            <div class="border-l-4 border-blue-400 pl-4">
+                                <h4 class="font-semibold text-white">삼성 청년 SW 아카데미 (SSAFY) 12기</h4>
+                                <p class="text-gray-400 text-sm">특화 프로젝트 우수상 (대전 2위)</p>
+                                <p class="text-gray-300 text-sm">AI 기반 OPIc 학습 플랫폼 '오마이픽' 개발</p>
+                            </div>
+                            <div class="border-l-4 border-green-400 pl-4">
+                                <h4 class="font-semibold text-white">국립중앙과학관 E-techcon AI 해커톤</h4>
+                                <p class="text-gray-400 text-sm">전체 2위 수상 (17팀 중 2위, 58명 참가)</p>
+                                <p class="text-gray-300 text-sm">AI 기술을 활용한 혁신적 솔루션 개발</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
