SW 개발자용도로 수정

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>이재욱 | AI 개발자 포트폴리오</title>
+    <title>이재욱 | SW 개발자 포트폴리오</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Noto+Sans+KR:wght@300;400;500;700&display=swap" rel="stylesheet">
@@ -330,9 +330,9 @@
         <header id="home" class="text-center mb-20 md:mb-32 scroll-animate min-h-screen flex flex-col justify-center">
             <div>
                 <h1 class="hero-name text-6xl md:text-8xl font-bold mb-3 text-white">이재욱</h1>
-                <p class="hero-title text-xl md:text-3xl text-gray-300 mb-4">AI Developer</p>
+                <p class="hero-title text-xl md:text-3xl text-gray-300 mb-4">SW Developer</p>
                 <p class="hero-intro text-lg md:text-xl text-gray-400 mb-8 max-w-2xl mx-auto">
-                    "새로운 기술을 배우고 활용하여 실용적인 솔루션을 만드는 것을 좋아합니다. <br class="hidden sm:block">끊임없이 학습하며 성장하는 개발자가 되고자 합니다."
+                    "다양한 기술을 활용하여 실용적인 소프트웨어 솔루션을 개발하는 것을 좋아합니다. <br class="hidden sm:block">끊임없이 학습하며 성장하는 개발자가 되고자 합니다."
                 </p>
                 <div class="space-y-3 sm:space-y-0 sm:space-x-8 text-gray-400 mb-8">
                     <span><a href="mailto:ki00035@naver.com" class="header-link text-lg">ki00035@naver.com</a></span>
@@ -352,14 +352,14 @@
                 <h2 class="section-title text-center">About Me</h2>
                 <div class="max-w-3xl mx-auto text-center">
                     <p class="about-me-text text-xl md:text-2xl text-gray-300 leading-relaxed">
-                        "새로운 기술을 배우고 활용하여 실용적인 솔루션을 만드는 것을 좋아합니다.
+                        "다양한 기술을 활용하여 실용적인 소프트웨어 솔루션을 개발하는 것을 좋아합니다.
                         <br class="my-3">
                         끊임없이 학습하며 성장하는 개발자가 되고자 합니다."
                     </p>
                     <p class="mt-6 text-gray-400 text-lg">
-                        기계공학 전공 후 AI 분야로 전향하여 머신러닝과 딥러닝 기술을 활용한 서비스 개발에 집중하고 있습니다.
+                        기계공학 전공 후 소프트웨어 개발 분야로 전향하여 풀스택 개발과 AI 기술을 활용한 서비스 개발에 집중하고 있습니다.
                         문제를 체계적으로 분석하고 효율적인 해결책을 찾는 것을 중요하게 생각하며, 팀원들과의 협업을 통해 더 나은 결과를 만들어내고자 노력합니다.
-                        현재는 AI 기반 교육 서비스 개발과 모델 최적화에 관심을 가지고 있으며, 실무에서 활용 가능한 기술 역량을 지속적으로 쌓아가고 있습니다.
+                        현재는 백엔드 아키텍처 설계와 AI 기술 통합에 관심을 가지고 있으며, 실무에서 활용 가능한 소프트웨어 개발 역량을 지속적으로 쌓아가고 있습니다.
                     </p>
                 </div>
             </div>
