커밋 체크용 커밋

--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
                 <h1 class="hero-name text-6xl md:text-8xl font-bold mb-3 text-white">이재욱</h1>
                 <p class="hero-title text-xl md:text-3xl text-gray-300 mb-4">SW Developer</p>
                 <p class="hero-intro text-lg md:text-xl text-gray-400 mb-8 max-w-2xl mx-auto">
-                    "다양한 기술을 활용하여 실용적인 소프트웨어 솔루션을 개발하는 것을 좋아합니다. <br class="hidden sm:block">끊임없이 학습하며 성장하는 개발자가 되고자 합니다."
+                    "다양한 기술을 활용하여 실용적인 소프트웨어 솔루션을 개발하는 것을 좋아합니다. 끊임없이 학습하며 성장하는 개발자가 되고자 합니다."
                 </p>
                 <div class="space-y-3 sm:space-y-0 sm:space-x-8 text-gray-400 mb-8">
                     <span><a href="mailto:ki00035@naver.com" class="header-link text-lg">ki00035@naver.com</a></span>
@@ -352,14 +352,10 @@
                 <h2 class="section-title text-center">About Me</h2>
                 <div class="max-w-3xl mx-auto text-center">
                     <p class="about-me-text text-xl md:text-2xl text-gray-300 leading-relaxed">
-                        "다양한 기술을 활용하여 실용적인 소프트웨어 솔루션을 개발하는 것을 좋아합니다.
-                        <br class="my-3">
-                        끊임없이 학습하며 성장하는 개발자가 되고자 합니다."
+                        "다양한 기술을 활용하여 실용적인 소프트웨어 솔루션을 개발하는 것을 좋아합니다. 끊임없이 학습하며 성장하는 개발자가 되고자 합니다."
                     </p>
                     <p class="mt-6 text-gray-400 text-lg">
-                        기계공학 전공 후 소프트웨어 개발 분야로 전향하여 풀스택 개발과 AI 기술을 활용한 서비스 개발에 집중하고 있습니다.
-                        문제를 체계적으로 분석하고 효율적인 해결책을 찾는 것을 중요하게 생각하며, 팀원들과의 협업을 통해 더 나은 결과를 만들어내고자 노력합니다.
-                        현재는 백엔드 아키텍처 설계와 AI 기술 통합에 관심을 가지고 있으며, 실무에서 활용 가능한 소프트웨어 개발 역량을 지속적으로 쌓아가고 있습니다.
+                        기계공학 전공 후 소프트웨어 개발 분야로 전향하여 풀스택 개발과 AI 기술을 활용한 서비스 개발에 집중하고 있습니다. 문제를 체계적으로 분석하고 효율적인 해결책을 찾는 것을 중요하게 생각하며, 팀원들과의 협업을 통해 더 나은 결과를 만들어내고자 노력합니다. 현재는 백엔드 아키텍처 설계와 AI 기술 통합에 관심을 가지고 있으며, 실무에서 활용 가능한 소프트웨어 개발 역량을 지속적으로 쌓아가고 있습니다.
                     </p>
                 </div>
             </div>
@@ -556,8 +552,7 @@
                                 <span class="px-3 py-1 bg-gray-800 text-gray-300 rounded-full text-sm font-medium border border-gray-700">교육서비스</span>
                             </div>
                             <p class="text-xl text-gray-300 leading-relaxed">
-                                <span class="text-yellow-400 font-bold">AI 기반 개인 맞춤형</span> OPIc 학습 플랫폼으로, 스크립트 생성부터 실전 연습, 상세 피드백까지
-                                <span class="text-blue-400 font-bold">원스톱 학습 솔루션</span>을 제공합니다.
+                                <span class="text-yellow-400 font-bold">AI 기반 개인 맞춤형</span> OPIc 학습 플랫폼으로, 스크립트 생성부터 실전 연습, 상세 피드백까지 <span class="text-blue-400 font-bold">원스톱 학습 솔루션</span>을 제공합니다.
                             </p>
                         </div>
 
@@ -671,9 +666,7 @@
                             <div>
                                 <strong class="block text-lg text-gray-100 mb-1">결과물 링크:</strong>
                                 <p class="text-gray-300">
-                                    <a href="#" class="hover:underline">[GitHub Repository (준비 중)]</a>, 
-                                    <a href="#" class="hover:underline">[시연 영상 (준비 중)]</a>,
-                                    <a href="#" class="hover:underline">[서비스 소개 PPT (본 파일)]</a>
+                                    <a href="https://github.com/SSAFY12-B107/OmyPIc" class="hover:underline text-blue-400" target="_blank" rel="noopener noreferrer">GitHub Repository</a>
                                 </p>
                             </div>
                         </div>
@@ -691,8 +684,7 @@
                                 <span class="px-3 py-1 bg-gray-800 text-gray-300 rounded-full text-sm font-medium border border-gray-700">파인튜닝</span>
                             </div>
                             <p class="text-xl text-gray-300 leading-relaxed">
-                                <span class="text-yellow-400 font-bold">제한된 VRAM 환경</span>에서 대규모 언어 모델의
-                                <span class="text-blue-400 font-bold">효율적 파인튜닝</span> 방법론을 확립한 연구 프로젝트입니다.
+                                <span class="text-yellow-400 font-bold">제한된 VRAM 환경</span>에서 대규모 언어 모델의 <span class="text-blue-400 font-bold">효율적 파인튜닝</span> 방법론을 확립한 연구 프로젝트입니다.
                             </p>
                         </div>
 
@@ -760,8 +752,7 @@
                                 <span class="px-3 py-1 bg-gray-800 text-gray-300 rounded-full text-sm font-medium border border-gray-700">자세추정</span>
                             </div>
                             <p class="text-xl text-gray-300 leading-relaxed">
-                                SAM-6D를 활용하여 <span class="text-yellow-400 font-bold">포탄의 정확한 자세추정</span>을 수행하고
-                                <span class="text-blue-400 font-bold">정밀 그립퍼 시스템</span>을 개발한 로보틱스 프로젝트입니다.
+                                SAM-6D를 활용하여 <span class="text-yellow-400 font-bold">포탄의 정확한 자세추정</span>을 수행하고 <span class="text-blue-400 font-bold">정밀 그립퍼 시스템</span>을 개발한 로보틱스 프로젝트입니다.
                             </p>
                         </div>
 
@@ -825,8 +816,7 @@
                                 <span class="px-3 py-1 bg-gray-800 text-gray-300 rounded-full text-sm font-medium border border-gray-700">연구</span>
                             </div>
                             <p class="text-xl text-gray-300 leading-relaxed">
-                                기존 논리적 추론을 벗어나 <span class="text-yellow-400 font-bold">창의적이고 직관적인 사고</span> 패턴을 학습하는
-                                <span class="text-blue-400 font-bold">혁신적 AI 모델</span> 연구 프로젝트입니다.
+                                기존 논리적 추론을 벗어나 <span class="text-yellow-400 font-bold">창의적이고 직관적인 사고</span> 패턴을 학습하는 <span class="text-blue-400 font-bold">혁신적 AI 모델</span> 연구 프로젝트입니다.
                             </p>
                         </div>
 
